Fix color contrast issue with locale selector label

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -34,6 +34,10 @@ body:not(.admin) {
   }
 }
 
+.locale .locale-form label {
+  color: inherit;
+}
+
 .top-bar {
   .top-bar-title a img {
     @include breakpoint(medium) {
